test/sematest/valid/declaration_immediately_visible.java
class A {
    public static void main(String[] args) {
        int x = (x = 2) + 2;
    }
}
