test/sematest/invalid/bool_int_conversion.java
class A {
  public static void main(String[] args) {
    int a = 4 + true;
  }
}